# secwe-cpp-client

./: CMakeLists.txt  README.md  main.cpp  prediction_info.cpp  prediction_info.h  secwe_client.cpp  secwe_client.h
